2007-11-11  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-do-despool): Do not force ps-lpr-switches to be a
	list.
	(ps-begin-job): Error if ps-lpr-switches is not a list.

2007-11-11  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* faces.el (face-normalize-spec): Remove function.
	(frame-set-background-mode): Undo last change.

2007-11-10  Jason Rumney  <jasonr@gnu.org>

	* w32-fns.el: Sync charset names with setup-default-fontset.
	Append "-1" where second part missing.

2007-11-10  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-mode-end-hook, isearch-mode-end-hook-quit):
	Fix docstring.  Reported by Leo <sdl.web@gmail.com>.

	* custom.el (custom-note-var-changed): Remove the `interactive'
	spec from this new non-interactive function.

2007-11-10  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-mode-map, doc-view-menu)
	(doc-view-pdf->txt-sentinel): Adapt to new search UI.
	(doc-view-search-backward): New function.
	(doc-view-search): Query new regexp if prefix arg is given, else
	jump to next/previous match.
	(doc-view-mode): Handle compressed files.
	(jka-compr): Required for compressed files.

2007-11-10  Paul Pogonyshev  <pogonyshev@gmx.net>

	* replace.el (query-replace-show-replacement): New defcustom.
	(perform-replace): Use `match-substitute-replacement' if
	`query-replace-show-replacement' is non-nil.

2007-11-10  David Kastrup  <dak@gnu.org>

	* subr.el (match-substitute-replacement): New function.

2007-11-10  Carsten Dominik  <dominik@science.uva.nl>

	* files.el (auto-mode-alist): Select org-mode for files with the
	extension ".org".

2007-11-10  Martin Rudalics  <rudalics@gmx.at>

	* help.el (help-window, help-window-point-marker): New variables.
	(help-window-select): New option.
	(with-help-window): New macro for displaying help windows.
	(help-window-display-message, help-window-setup-finish)
	(help-window-setup): New functions used for setting up help windows.