@@ -1,3 +1,9 @@
+2007-11-11  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el (vc-start-entry): Fix setting the in the case the function
+	is called from vc-dired.  Use when instead of if where
+	appropriate.
+
 2007-11-11  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
 
 	* ps-print.el (ps-do-despool): Do not force ps-lpr-switches to be a
